[package]
name = "htb-api"
version = "0.6.0"
edition = "2021"

[lib]
name = "hackthebox"
crate-type = ["cdylib"]

[dependencies]
hackthebox-rs = { path = "./hackthebox-rs" }
pyo3 = "0.20"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "*", features = ["time"] }
