[tool.poetry]
name = "PyHackTheBox"
packages = [
    {include = "hackthebox"}
]
version = "0.5.7"
description = "A wrapper for the Hack The Box API."
authors = ["Jamie Hill-Daniel <clubby789@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
python-dateutil = "^2.8.2"
pytest = "^7.1.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
sphinx-rtd-theme = "^1.0.0"
twine = "^4.0.0"
Flask = "^2.1.2"
mypy = "^0.950"
types-python-dateutil = "^2.8.14"
types-requests = "^2.27.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
